added div and h1

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>ITMD441 Lab 1</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1 class="center">Denatra Antar</h1>
+    </div>
 </body>
 </html>
