added two sections and changed a few colors

--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
 <body>
     <div class="container">
         <h1 class="center">Denatra Antar</h1>
+
+        <section>
+            <h2>Introduction</h2>
+            <p>I am from Chicago, Illinois. I have lived here for my whole life. I enjoy playing video games during my free time.</p>
+        </section>
+
+        <section>
+            <h2>Education</h2>
+            <p>I currently have:</p>
+            <ul>
+                <li>Associates in Arts</li>
+                <li>Recently took a web devlopment class here at IIT</li>
+                <li>Have prior experience from when I was younger and learning HTML and CSS</li>
+            </ul>
+        </section>
     </div>
+    
 </body>
 </html>
